# Johniac

./: CMakeLists.txt  Johniac  MakeFile  Makefile  README.md  auto_type.h  constant.c  constant.h  double_john.c  double_john.h  help_func.c  help_func.h  input.txt  j_applied_functions.c  j_applied_functions.h  j_commands.c  j_commands.h  j_core.c  j_core.h  j_double.c  j_double.h  j_message.c  j_message.h  main.c  output.txt  курсовой проект Johniac.docx
